examples/Traffic-management/AWS ALB/IP Mode/StableService.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-stable
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 -
